...

import net.nymtech.nymvpn.ui.AppUiState
import net.nymtech.nymvpn.util.extensions.isQuicSupported
import net.nymtech.vpn.backend.Tunnel

enum class ConnectionStatus {
	Disconnected,
	FastQuicConnected,
	FastNonQuicConnected,
}

internal fun getConnectionStatus(hasQuicEnabled: Boolean, appUiState: AppUiState): ConnectionStatus {
	if (appUiState.settings.vpnMode != Tunnel.Mode.TWO_HOP_MIXNET) return ConnectionStatus.Disconnected
...
