...
import javax.inject.Inject

@HiltViewModel
class PassphraseViewModel @Inject constructor(private val backendManager: BackendManager, private val deviceAuthManager: DeviceAuthManager) : ViewModel() {

	private val _passphrase = MutableStateFlow<List<String>>(emptyList())
	val passphrase: StateFlow<List<String>> = _passphrase

	init {
		viewModelScope.launch {
			val passphrase = backendManager.getMnemonic()
			_passphrase.emit(passphrase)
		}
...
