...
            } else {
                switch entry.status {
                case .error:
                    Text("Error")
                        .foregroundStyle(NymWidgetColors.error)
                default:
                    Text("Disconnected")
                }
            }
        }
    }

    var buttonTitle: String {
        if entry.status.isConnected || entry.status.isConnecting {
            return "Disconnect"
        } else {
            return "Connect"
        }
    }

    var buttonTint: Color {
        if entry.status.isConnected || entry.status.isConnecting {
            return NymWidgetColors.error
...
