# Navigating into the sign-up / create-account flow from the welcome sheet.
appId: net.nymtech.vpn
tags:
  - ui-validation
---
- runFlow: ../../subflows/logout_to_welcome.yaml

- assertVisible: "Sign up"
- tapOn: "Sign up"
- extendedWaitUntil:
    visible:
      text: "Anonymous account"
    timeout: 10000
- assertVisible: "Sign up with socials.*"
- assertNotVisible: "Login to my account"
