appId: net.nymtech.nymvpn.mock.debug
---
- launchApp

- runFlow:
    when:
      visible: "Connection request"
    commands:
      - tapOn: "OK"

- extendedWaitUntil:
    visible:
      text: "Connect"
    timeout: 15000

- assertVisible:
    text: "Disconnected"

- assertVisible:
    text: "SELECT MODE"
